--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "ch.pete.testconfigapp"
+        applicationId "ch.pete.appconfig"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -28,7 +28,8 @@ android {
 dependencies {
     api "com.jakewharton.timber:timber:4.5.1"
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
