--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "ch.pete.appconfig"
+        applicationId "ch.pete.appconfigapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
