--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,2 @@
-rootProject.name='Test Config App'
-include ':app'
-include ':appconfiglibrary'
+rootProject.name='AppConfig'
+include ':app', ':appconfig'
