--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.gitlab.arturbosch.detekt'
 
 android {
     compileSdkVersion 29
@@ -63,4 +64,21 @@ dependencies {
     testImplementation 'androidx.room:room-testing:2.2.5'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+detekt {
+    // fail build on any finding
+    failFast = true
+    // preconfigure defaults
+    buildUponDefaultConfig = true
+    config = files("$projectDir/../config/detekt.yml")
+
+    reports {
+        // observe findings in your browser with structure and code snippets
+        html.enabled = true
+        // checkstyle like format mainly for integrations like Jenkins
+        xml.enabled = false
+        // similar to the console output, contains issue signature to manually edit baseline files
+        txt.enabled = false
+    }
 }
