--- a/appconfig/build.gradle
+++ b/appconfig/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven-publish'
+apply plugin: 'io.gitlab.arturbosch.detekt'
 
 android {
     compileSdkVersion 29
@@ -64,5 +65,22 @@ publishing {
                 }
             }
         }
+    }
+}
+
+detekt {
+    // fail build on any finding
+    failFast = true
+    // preconfigure defaults
+    buildUponDefaultConfig = true
+    config = files("$projectDir/../config/detekt.yml")
+
+    reports {
+        // observe findings in your browser with structure and code snippets
+        html.enabled = true
+        // checkstyle like format mainly for integrations like Jenkins
+        xml.enabled = false
+        // similar to the console output, contains issue signature to manually edit baseline files
+        txt.enabled = false
     }
 }
