--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ buildscript {
     }
 }
 
+plugins {
+    id("io.gitlab.arturbosch.detekt").version("1.8.0")
+}
+
 allprojects {
     repositories {
         google()
