add lint config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        // see also kotlinOptions.allWarningsAsErrors below
+        warningsAsErrors true
+        abortOnError true
+        ignore "ContentDescription", "Overdraw"
+    }
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
@@ -64,6 +70,10 @@ dependencies {
     testImplementation 'androidx.room:room-testing:2.2.5'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.allWarningsAsErrors = true
 }
 
 detekt {
