--- a/appconfig/build.gradle
+++ b/appconfig/build.gradle
@@ -24,7 +24,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    lintOptions {
+        // see also kotlinOptions.allWarningsAsErrors below
+        warningsAsErrors true
+        abortOnError true
+        ignore "ContentDescription", "Overdraw"
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -66,6 +78,10 @@ publishing {
             }
         }
     }
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.allWarningsAsErrors = true
 }
 
 detekt {
