--- a/exampleapp/build.gradle
+++ b/exampleapp/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "androidx.fragment:fragment-ktx:1.2.4"
+    implementation "androidx.preference:preference-ktx:1.1.1"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
