--- a/exampleapp/build.gradle
+++ b/exampleapp/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation project(':appconfig')
+    implementation project(':library')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
