--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,6 @@ jobs:
             echo "NEXUS_USERNAME=$NEXUS_USERNAME" >> gradle.properties
             echo "NEXUS_PASSWORD=$NEXUS_PASSWORD" >> gradle.properties
             ./gradlew check bundleReleaseAar
-      #      - persist_to_workspace:
-      #          root: library/build/outputs/
-      #          paths:
-      #            - aar/*.aar
       - store_artifacts:
           path: library/build/outputs/aar
 
@@ -59,10 +55,7 @@ workflows:
   version: 2
   build-n-publish:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /^v.*/
+      - build
       - publish-to-ossrh:
           filters:
             tags:
