--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             echo "NEXUS_PASSWORD=$NEXUS_PASSWORD" >> gradle.properties
             echo "signing.keyId=$PGP_SIGNING_KEY_ID" >> gradle.properties
             echo "signing.password=$PGP_SIGNING_PASSWORD" >> gradle.properties
-            echo "signing.secretKeyRingFile=secring.gpg" >> gradle.properties
+            echo "signing.secretKeyRingFile=../secring.gpg" >> gradle.properties
             # convert to env var
             # - base64 ~/.gnupg/secring.gpg > ./secring.gpg.base64
             # - Copy content of ./secring.gpg.base64 to env var
@@ -49,7 +49,7 @@ jobs:
           name: "Publish Release on GitHub"
           command: |
             go get github.com/tcnksm/ghr
-            ghr -t ${GITHUB_PERSONAL_ACCESS_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./artifacts/aar/*.aar
+            ghr -t ${GITHUB_PERSONAL_ACCESS_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./artifacts/aar/*-release.aar
 
 workflows:
   version: 2
