--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 
 plugins {
     id("io.gitlab.arturbosch.detekt").version("1.8.0")
+    id 'io.codearte.nexus-staging' version '0.21.2'
 }
 
 allprojects {
