--- a/exampleapp/build.gradle
+++ b/exampleapp/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation project(':library')
+//    implementation 'ch.pete.appconfig:appconfig:+'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
