ignore failure of closeRepository

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,8 @@ jobs:
             # - Copy content of ./secring.gpg.base64 to env var
             echo $PGP_SECRING_BASE64 | base64 --decode > secring.gpg
             ./gradlew publish
-            ./gradlew closeRepository
+            # do not fail build if closeRepository fails. It fails randomly but usually still works.
+            ./gradlew closeRepository || true
       - persist_to_workspace:
           root: library/build/outputs/
           paths:
